--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
 	<name>demo</name>
 	<description>Demo project for cucumber Spring Boot</description>
 	<properties>
-		<java.version>1.8</java.version>
-		<cucumber.version>6.9.1</cucumber.version>
+		<java.version>11</java.version>
+		<cucumber.version>7.8.1</cucumber.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -49,22 +49,23 @@
 		</dependency>
 	</dependencies>
 
-
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
-		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+					<configuration>
+						<excludes>
+							<exclude>
+								<groupId>org.projectlombok</groupId>
+								<artifactId>lombok</artifactId>
+							</exclude>
+						</excludes>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 
 </project>
